# jinja-lsp

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  act_script.sh  pnpm-lock.yaml  rust-toolchains.toml
.github/workflows/: CI-nodejs.yml  build-extension.yml  ci.yml  release-extension.yml  release.yml
client/: pnpm-lock.yaml
editors/code/: .gitignore  .vscodeignore  build-all.sh  build.sh  build_vsix.sh  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
editors/code/client/: package-lock.json  package.json  tsconfig.json
editors/code/client/src/: binaryName.ts  extension.ts
example/: .gitignore  Cargo.toml  README.md  pyproject.toml
example/src/: main.py  main.rs
example/templates/: account.jinja  header.jinja  hello.jinja
examples/: index.rs
jinja-lsp/: Cargo.toml
jinja-lsp-nodejs/: .gitignore  Cargo.toml  example.mjs  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml  test.mjs
jinja-lsp-nodejs/.github/workflows/: CI.yml
jinja-lsp-nodejs/__test__/: index.spec.mjs
jinja-lsp-nodejs/npm/android-arm-eabi/: README.md  package.json
jinja-lsp-nodejs/npm/android-arm64/: README.md  package.json
jinja-lsp-nodejs/npm/darwin-arm64/: README.md  package.json
jinja-lsp-nodejs/npm/darwin-universal/: README.md  package.json
jinja-lsp-nodejs/npm/darwin-x64/: README.md  package.json
jinja-lsp-nodejs/npm/freebsd-x64/: README.md  package.json
jinja-lsp-nodejs/npm/gnu-linux/: README.md  package.json
jinja-lsp-nodejs/npm/linux-arm-gnueabihf/: README.md  package.json
jinja-lsp-nodejs/npm/linux-arm-musleabihf/: README.md  package.json
jinja-lsp-nodejs/npm/linux-arm64-gnu/: README.md  package.json
jinja-lsp-nodejs/npm/linux-arm64-musl/: README.md  package.json
jinja-lsp-nodejs/npm/linux-riscv64-gnu/: README.md  package.json
jinja-lsp-nodejs/npm/linux-x64-gnu/: README.md  package.json
jinja-lsp-nodejs/npm/linux-x64-musl/: README.md  package.json
jinja-lsp-nodejs/npm/win32-arm64-msvc/: README.md  package.json
jinja-lsp-nodejs/npm/win32-ia32-msvc/: README.md  package.json
jinja-lsp-nodejs/npm/win32-x64-msvc/: README.md  package.json
jinja-lsp-nodejs/src/: lib.rs
jinja-lsp-queries/: Cargo.toml
jinja-lsp-queries/src/: lib.rs  lsp_helper.rs  parsers.rs  queries.rs  test_queries.rs  to_input_edit.rs  tree_builder.rs
jinja-lsp-queries/src/capturer/: included.rs  init.rs  mod.rs  object.rs  rust.rs
jinja-lsp-queries/src/search/: definition.rs  jinja_state.rs  mod.rs  objects.rs  parsers.rs  python_identifiers.rs  queries.rs  rust_identifiers.rs  rust_state.rs  rust_template_completion.rs  snippets_completion.rs  templates.rs  test_queries.rs
jinja-lsp-queries/src/search/queries/jinja/: definitions.scm  imports.scm  objects.scm  snippets.scm
jinja-lsp-queries/src/search/queries/python/: definitions.scm  node_js.scm  paths.scm
jinja-lsp-queries/src/search/queries/rust/: definitions.scm  paths.scm
jinja-lsp/src/: backend.rs  config.rs  lib.rs  lsp_files.rs  lsp_files2.rs  main.rs
jinja-lsp/src/channels/: diagnostics.rs  lsp.rs  mod.rs
jinja-lsp/src/filter/: mod.rs
jinja-lsp/src/filter/md/filters/: attr.md  batch.md  capitalize.md  default.md  float.md  indent.md  int.md  items.md  join.md  last.md  list.md  map.md  max.md  min.md  rejectattr.md  reverse.md  safe.md  selectattr.md  slice.md  some2.sh  some3.sh  sort.md  tojson.md  trim.md
jinja-lsp/src/filter/md/filters/contrib/: timeformat.md
jinja-lsp/src/template_tests/: mod.rs
jinja-lsp/src/template_tests/md/: is_boolean.md  is_defined.md  is_divisibleby.md  is_endingwith.md  is_eq.md  is_even.md  is_false.md  is_filter.md  is_float.md  is_ge.md  is_gt.md  is_in.md  is_integer.md  is_iterable.md  is_le.md  is_lower.md  is_lt.md  is_mapping.md  is_ne.md  is_none.md  is_number.md  is_odd.md  is_safe.md  is_sameas.md  is_sequence.md  is_startingwith.md  is_string.md  is_test.md  is_true.md  is_undefined.md  is_upper.md
server/: Cargo.toml
server/src/: backend.rs  config.rs  lsp_files.rs  main.rs  types.rs
server/src/filter/: mod.rs
server/src/filter/md/filters/: abs.md  bool.md  escape.md  length.md  lower.md  some4.sh  title.md  upper.md  urlencode.md
server/src/filter/md/filters/contrib/: datetimeformat.md  pluralize.md
src/: capturer.rs  config.rs  filters.rs  lib.rs  lsp_files.rs  main.rs  parsers.rs  queries.rs  query_helper.rs  server.rs  to_input_edit.rs
src/md/filters/: dictsort.md  first.md  pprint.md  reject.md  replace.md  round.md  select.md  some.sh  unique.md
src/md/filters/contrib/: dateformat.md
tree_sitter_queries/: Cargo.toml
tree_sitter_queries/src/: capturer.rs  lib.rs  lsp_helper.rs  parsers.rs  queries.rs  test_queries.rs  to_input_edit.rs  tree_builder.rs
tree_sitter_queries/src/capturer/: capturer.rs  init.rs  mod.rs  object.rs  rust.rs
