[project]
name = "example"
version = "0.1.0"
description = "Simple jinja-lsp example for Python"
authors = [
    { name = "uros-5"}
]
dependencies = [
    "jinja2>=3.1.4",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pyright]
extraPaths = ["example/.venv/lib/python3.10/site-packages"] 
