[package]
name = "jinja-lsp-queries"
version = "0.2.3"
edition = "2024"
description = "TreeSitter queries for jinja-lsp"
license = "MIT"

[dependencies]
tree-sitter = "0.25.6"
tree-sitter-jinja2 = "0.0.16"
tree-sitter-rust = "0.23.0"
tower-lsp = { version = "0.20.0", features = ["proposed"] }
ropey = "1.5.0"
tree-sitter-python = "=0.23.0"
tree-sitter-language = "0.1.0"

# [lints.rust]
# unused_variables = "allow"
# unused_imports = "allow"
# dead_code = "allow"
