[package]
name = "jinja-lsp"
version = "0.1.88"
edition = "2021"
license = "MIT"
authors = ["uros-5"]
description = "Language server for jinja2"
homepage = "https://github.com/uros-5/jinja-lsp"
repository = "https://github.com/uros-5/jinja-lsp"
keywords = ["jinja", "templates", "lsp"]
readme = "README.md"

[profile.release]
strip = true
opt-level = 3

[[bin]]
name = "jinja-lsp"
path = "src/main.rs"


[dependencies]
env_logger = "0.11.8"
ropey = "1.5.0"
serde_json = "1.0.78"
tokio = { version = "1.38.2", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"]}
serde = { version = "1.0", features = ["derive"] }
tree-sitter = "^0.23.0"
anyhow = "1.0.75"
tree-sitter-jinja2 = "0.0.12"
tree-sitter-rust = "0.23.0"
jinja-lsp-queries = { path = "../jinja-lsp-queries", version = "0.1.88"}
tree-sitter-language = "0.1.0"
toml = {version = "0.8.19", features = ["display"]}
clap = { version = "4.5.39", features = ["derive"] }
ignore = "0.4.23"
