[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
env_logger = "0.9.0"
ropey = "1.5.0"
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.19.0", features = ["proposed"]}
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.1.0"
log = "0.4.14"
im-rc = "15.0.0"
tree-sitter = "0.20.10"
walkdir = "2.4.0"
anyhow = "1.0.75"
tree-sitter-jinja2 = "0.0.5"
tree-sitter-rust = "0.20.4"
tree_sitter_queries = { path = "../tree_sitter_queries"}

